tests/samples/positive/core/plain_main.ax
module plain_main;

fn main() -> i32 {
    return 0;
}
