tests/samples/negative/types/empty_tuple_pattern.ax
module empty_tuple_pattern;

fn main() -> i32 {
    let () = 1;
    return 0;
}
